# autumn-homepage

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dioxus.toml  Dockerfile  README.md  bun.lockb  docker-compose.yml  input.css  package-lock.json  package.json  tailwind.config.ts
.github/workflows/: main.yml
assets/: autumn-logo-dark.avif  autumn-logo.avif
assets/images/join/: avatar.avif  azbel.avif  monitor.avif  rorqual.avif  the-great-curve.avif
data/: data.txt
entity/: Cargo.toml
entity/src/entities/: mod.rs  prelude.rs  stats.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: constants.rs  index.html  main.rs
src/api/: constant.rs  error.rs  mod.rs  update.rs
src/api/controller/: stats.rs
src/api/data/: stats.rs
src/api/model/: mod.rs  stats.rs  zkill.rs
src/api/service/: mod.rs  stats.rs  zkill.rs
src/api/task/: stats.rs
src/model/: stats.rs
src/web/: app.rs  constant.rs  constants.rs  mod.rs  router.rs
src/web/components/: footer.rs  header.rs  mod.rs
src/web/components/home/: call_to_action.rs  endgame.rs  frequently_asked_questions.rs  hero.rs  learning_curve.rs  what_makes_autumn_unique.rs
src/web/components/home/sections/: hero.rs
src/web/components/join/: footer.rs  header.rs  mod.rs
src/web/components/join/section/: call_to_action.rs  endgame.rs  frequently_asked_questions.rs  hero.rs  learning_curve.rs  mod.rs
src/web/model/: corporation.rs  mod.rs
src/web/routes/: error.rs  layout.rs  mod.rs  page.rs
src/web/routes/join/: mod.rs  page.rs
tests/api/: mod.rs
tests/api/service/: stats.rs
