[package]
name = "join-autumn"
version = "0.1.0"
authors = ["hyziri <hyziri@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "migration", "entity"]

[dependencies]
migration = { path = "migration" } 
entity = { path = "entity" } 

serde = { version = "1.0.197", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
reqwest = { version = "0.12.9", features = ["json"] }
serde_json = "1.0.132"
thiserror = "2.0.0"
tokio = { version = "1.41.1", features = ["macros"] }
mockito = "1.5.0"
log = "0.4.22"
sea-orm = "1.1.1"

dioxus = { version = "0.5.6", features = ["fullstack", "router"] }
dioxus-logger = "0.5.1"
dioxus-helmet = { git = "https://github.com/dioxus-community/dioxus-helmet.git" }
dioxus-free-icons = { version = "0.8.6", features = ["font-awesome-brands", "font-awesome-solid"] }
manganis = "0.2.2"

[features]
default = []
server = ["dioxus/axum"]
web = ["dioxus/web"]
